@@ -1,21 +1,23 @@
 # Maintainer: Chirantan Ekbote <chirantan.ekbote at gmail.com>
 
 pkgname=wanderlust-git
-pkgver=e53d797
+pkgver=0.4264.e53d797
 pkgrel=1
 pkgdesc="Mail/News reader supporting IMAP4rev1 for emacs"
 url="https://github.com/ikazuhiro/wanderlust"
 arch=('any')
 license=('GPL')
-depends=('emacs' 'emacs-apel' 'flim' 'semi')
+depends=('pacman>=4.1' 'emacs' 'emacs-apel' 'flim' 'semi')
 makedepends=('bbdb' 'git')
 optdepends=('bbdb: contact management utility')
 provides=('wanderlust')
 conflicts=('wanderlust')
 install=wanderlust.install
 changelog=CHANGELOG
-source=("git://github.com/ikazuhiro/wanderlust")
-md5sums=('SKIP')
+source=("git://github.com/ikazuhiro/wanderlust"
+	"wanderlust-sleep.service")
+md5sums=('SKIP'
+         '75d61275ba94202c3ac263bd02d574d3')
 
 _pixmapdir=/usr/share/emacs/$(emacs -batch -eval "(princ (format \"%d.%d\" emacs-major-version emacs-minor-version))")/etc/wl/icons/
 _lispdir=/usr/share/emacs/site-lisp
@@ -23,7 +25,7 @@ _infodir=/usr/share/info
 
 pkgver() {
   cd 'wanderlust'
-	git rev-parse --short HEAD
+	echo "0.$(git rev-list --count HEAD).$(git describe --always)"
 }
 
 build() {
@@ -41,4 +43,5 @@ package() {
 		INFODIR="$pkgdir$_infodir"
 
 	install -m644 wanderlust/utils/ssl.el "$pkgdir/usr/share/emacs/site-lisp/ssl.el"
+	install -Dm644 wanderlust-sleep.service "$pkgdir/usr/lib/systemd/system/wanderlust-sleep.service"
 }
