@@ -1,0 +1,13 @@
+[Unit]
+Description=wanderlust sleep hook
+Before=netctl-sleep.service
+Before=sleep.target
+StopWhenUnneeded=yes
+
+[Service]
+Type=oneshot
+RemainAfterExit=yes
+ExecStart=/usr/bin/emacsclient --socket-name /tmp/emacs1000/server --eval "(wl-toggle-plugged 'off)"
+
+[Install]
+WantedBy=sleep.target
