@@ -1,3 +1,14 @@
+2013-04-06 Chirantan Ekbote <chirantan.ekbote@gmail.com>
+	* 20130406 :
+	Removed ExecStop command from service file since wnaderlust could
+	start before the internet connection is back up.  Updated install
+	instructions
+
+2013-04-04 Chirantan Ekbote <chirantan.ekbote@gmail.com>
+	* 20130404 :
+	Added sleep service file so wanderlust doesn't hang when the
+	system goes to sleep
+
 2013-04-03 Chirantan Ekbote <chirantan.ekbote@gmail.com>
 	* 20130403 :
 	Created package
